--- a/packages/mobile/.gitignore
+++ b/packages/mobile/.gitignore
@@ -49,9 +49,12 @@ buck-out/
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/
 
-*/fastlane/report.xml
-*/fastlane/Preview.html
-*/fastlane/screenshots
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/builds
+fastlane/keys
+fastlane/appstore_api_key.json
 
 # Bundle artifact
 *.jsbundle
