--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "run-android": "react-native run-android --no-packager",
-    "run-ios": "react-native run-ios --no-packager",
-    "dev": "react-native start"
+    "run:android": "react-native run-android --no-packager",
+    "run:ios": "react-native run-ios --no-packager",
+    "dev": "react-native start",
+    "build:ios": "bundle exec fastlane ios build"
   },
   "dependencies": {
     "@azzapp/app": "*",
