--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     "plugin:react-hooks/recommended",
     "plugin:prettier/recommended"
   ],
-  "ignorePatterns": ["**/__generated__/*"],
+  "ignorePatterns": ["**/__generated__/*", "./packages/relay/artifacts/*"],
   "rules": {
     "array-callback-return": "error",
     "no-promise-executor-return": "error",
