--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -2,21 +2,16 @@
   "name": "@azzapp/app",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "relay": "relay-compiler",
-    "relay-watch": "relay-compiler --watch",
-    "build": "yarn relay"
-  },
   "dependencies": {
     "@azzapp/shared": "*",
+    "@azzapp/relay": "*",
     "add": "^2.0.6",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
     "lodash": "^4.17.21",
     "react-native-qrcode-svg": "^6.1.2",
-    "react-relay": "^13.2.0",
-    "use-debounce": "^8.0.1",
-    "yarn": "^1.22.18"
+    "react-relay": "^14.0.0",
+    "use-debounce": "^8.0.1"
   },
   "peerDependencies": {
     "react": "^18.1.0",
@@ -25,7 +20,7 @@
     "react-native-reanimated": "^3.0.0-rc.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-svg": "^12.3.0",
-    "react-native-web": "^0.17.7"
+    "react-native-web": "^0.18.1"
   },
   "devDependencies": {
     "@testing-library/react-native": "^9.1.0",
@@ -34,7 +29,6 @@
     "@types/react-native": "^0.67.3",
     "@types/react-relay": "^13.0.2",
     "@types/relay-test-utils": "^6.0.5",
-    "relay-compiler": "^13.2.0",
-    "relay-test-utils": "^13.2.0"
+    "relay-test-utils": "^14.0.0"
   }
 }
