--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -3,19 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "main": "./src",
-  "scripts": {
-    "update-schema": "ts-node ./scripts/updateSchema.ts"
-  },
   "devDependencies": {
     "@types/lodash": "^4.14.181",
-    "@types/uuid": "^8.3.4",
-    "ts-node": "^10.7.0"
+    "@types/uuid": "^8.3.4"
   },
   "dependencies": {
     "@azzapp/shared": "*",
+    "@azzapp/relay": "*",
     "cassandra-driver": "^4.6.3",
     "cuid": "^2.1.8",
-    "graphql": "^16.3.0",
+    "graphql": "^16.5.0",
     "graphql-relay": "^0.10.0",
     "lodash": "^4.17.21",
     "micro": "^9.3.4",
