--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -12,18 +12,18 @@
   },
   "dependencies": {
     "@azzapp/app": "*",
+    "@azzapp/relay": "*",
     "@azzapp/shared": "*",
     "react": "^18.1.0",
-    "react-native": "^0.69.0-rc.3",
+    "react-native": "^0.69.0-rc.6",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-image-picker": "^4.7.3",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-navigation": "^7.28.0",
     "react-native-reanimated": "^3.0.0-rc.0",
     "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "https://github.com/fdecampredon/react-native-screens.git#feat-shared-element-transitions",
     "react-native-svg": "^12.3.0",
-    "react-relay": "^13.2.0",
-    "react-relay-network-modern": "^6.2.1"
+    "react-relay": "^14.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.3",
