--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "react-relay": "^13.2.0",
-    "react-relay-network-modern": "^6.2.1"
+    "react-relay": "^14.0.0"
   },
   "devDependencies": {
     "@types/react-relay": "^13.0.2"
