--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,14 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "yarn workspace @azzapp/app build && next build",
+    "build": "yarn workspace relay && next build",
     "start": "next start"
   },
   "dependencies": {
     "@azzapp/app": "*",
     "@azzapp/data": "*",
-    "apollo-server-core": "^3.6.7",
-    "apollo-server-micro": "^3.6.7",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.29.1",
     "cors": "^2.8.5",
@@ -22,8 +20,10 @@
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-native-web": "^0.17.7",
-    "react-relay": "^13.2.0"
+    "react-native-web": "^0.18.1",
+    "react-native-web-linear-gradient": "^1.1.2",
+    "react-relay": "^14.0.0",
+    "safe-area-insets": "^1.4.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -32,7 +32,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^18.0.3",
     "@types/react-dom": "^18.0.0",
-    "babel-plugin-react-native-web": "^0.17.7",
+    "babel-plugin-react-native-web": "^0.18.1",
     "next-transpile-modules": "^9.0.0",
     "react-native-web-image-loader": "^0.1.1"
   }
