--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       # JavaScript build
       - name: Relay Compiler 
-        run: yarn workspace @azzapp/app relay
+        run: yarn relay
       
       # Testing
       - name: Lint
