--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,11 @@ jobs:
       # - name: Fix FlipperFoly
       #   run: cd packages/mobile && sh ./scripts/fix-m1-flipper-foly.sh
         
+      - name: Setup Xcode env
+        run: |
+          echo "Setup node for xcode to $(command -v node)"
+          echo "export NODE_BINARY=$(command -v node)" > ./packages/mobile/ios/xcode.env
+        
       - name: Build ios application
         run: yarn build:ios
         env:
