--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -16,10 +16,12 @@
   "peerDependencies": {
     "react": "^18.1.0",
     "react-native": "^0.69.0-rc.3",
+    "react-native-create-thumbnail": "^1.5.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^3.0.0-rc.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-svg": "^12.3.0",
+    "react-native-video": "^5.2.0",
     "react-native-web": "^0.18.1"
   },
   "devDependencies": {
