--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -16,6 +16,7 @@
     "@azzapp/shared": "*",
     "react": "^18.1.0",
     "react-native": "^0.69.0-rc.6",
+    "react-native-create-thumbnail": "^1.5.1",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-image-picker": "^4.7.3",
     "react-native-linear-gradient": "^2.5.6",
@@ -23,11 +24,13 @@
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "https://github.com/fdecampredon/react-native-screens.git#feat-shared-element-transitions",
     "react-native-svg": "^12.3.0",
+    "react-native-video": "^5.2.0",
     "react-relay": "^14.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.3",
     "@types/react-native": "^0.67.3",
+    "@types/react-native-video": "^5.0.13",
     "graphql": "^16.3.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-monorepo-tools": "^1.1.4",
