--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -15,7 +15,7 @@
     "@azzapp/relay": "*",
     "@azzapp/shared": "*",
     "react": "^18.1.0",
-    "react-native": "^0.69.0-rc.6",
+    "react-native": "^0.69.0",
     "react-native-create-thumbnail": "^1.5.1",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-image-picker": "^4.7.3",
