--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -18,8 +18,10 @@
     "react-native": "^0.69.0",
     "react-native-create-thumbnail": "^1.5.1",
     "react-native-encrypted-storage": "^4.0.2",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-image-picker": "^4.7.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-photo-gallery-api": "^1.1.0",
     "react-native-reanimated": "^3.0.0-rc.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "https://github.com/fdecampredon/react-native-screens.git#feat-shared-element-transitions",
