--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,7 +29,7 @@
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^12.3.0",
-    "react-native-video": "^6.0.0-alpha.1",
+    "react-native-video": "^5.2.0",
     "react-native-web": "^0.18.1",
     "react-relay": "^14.1.0",
     "react-transition-group": "^4.4.5",
