--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,21 @@ jobs:
         run: node ./scripts/getVercelPreviewUrl.js ${{ github.ref }} ${{ github.event.pull_request.head.sha }}  ${{ secrets.VERCEL_TOKEN }}
         id: vercel_preview_url
 
+      # Appcenter setup
+      - name: Set App Center env for staging
+        if: github.ref == 'refs/heads/main'
+        run: |
+          echo "app_center_ios_app_name=${{ secrets.APPCENTER_STAGING_IOS_APP_NAME }}" >> $GITHUB_ENV
+          echo "app_center_ios_api_token=${{ secrets.APPCENTER_STAGING_IOS_API_TOKEN }}" >> $GITHUB_ENV
+          echo "app_center_ios_secret=${{ secrets.APPCENTER_STAGING_IOS_APP_SECRET }}" >> $GITHUB_ENV
+          
+      - name: Set App Center env for dev
+        if: github.ref != 'refs/heads/main'
+        run: |
+          echo "app_center_ios_app_name=${{ secrets.APPCENTER_DEV_IOS_APP_NAME }}" >> $GITHUB_ENV
+          echo "app_center_ios_api_token=${{ secrets.APPCENTER_DEV_IOS_API_TOKEN }}" >> $GITHUB_ENV
+          echo "app_center_ios_secret=${{ secrets.APPCENTER_DEV_IOS_APP_SECRET }}" >> $GITHUB_ENV
+
       # IOS App build
       - name: Cache CocoaPods
         uses: actions/cache@v3
@@ -80,19 +95,9 @@ jobs:
           NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME: "azzapp"
           NEXT_PUBLIC_CLOUDINARY_API_KEY: "281326962786824"
           NEXT_PUBLIC_API_ENDPOINT: "https://${{ steps.vercel_preview_url.outputs.vercel_url }}/api"
+          APPCENTER_IOS_APP_SECRET: ${{ env.app_center_ios_secret }}
   
       # IOS App Deployments
-      - name: Set App Center env for staging
-        if: github.ref == 'refs/heads/main'
-        run: |
-          echo "app_center_ios_app_name=${{ secrets.APPCENTER_STAGING_IOS_APP_NAME }}" >> $GITHUB_ENV
-          echo "app_center_ios_api_token=${{ secrets.APPCENTER_STAGING_IOS_API_TOKEN }}" >> $GITHUB_ENV
-          
-      - name: Set App Center env for dev
-        if: github.ref != 'refs/heads/main'
-        run: |
-          echo "app_center_ios_app_name=${{ secrets.APPCENTER_DEV_IOS_APP_NAME }}" >> $GITHUB_ENV
-          echo "app_center_ios_api_token=${{ secrets.APPCENTER_DEV_IOS_API_TOKEN }}" >> $GITHUB_ENV
 
       - name: Deploy on App Center
         run: yarn deploy:ios
