--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "metro-react-native-babel-preset": "^0.70.3",
     "node-fetch": "2",
     "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.6.0",
     "relay-compiler": "^14.1.0",
     "ts-node": "^10.7.0",
