--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "@babel/plugin-transform-react-jsx": "^7.17.3",
     "@babel/runtime": "^7.12.5",
     "@svgr/webpack": "^6.2.1",
-    "@types/jest": "^26.0.24",
+    "@testing-library/jest-native": "^4.0.11",
+    "@types/jest": "^29.0.2",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^29.0.3",
     "babel-plugin-relay": "^14.1.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
@@ -42,7 +43,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^26.6.3",
+    "jest": "^29.0.3",
     "metro-react-native-babel-preset": "^0.70.3",
     "node-fetch": "2",
     "patch-package": "^6.4.7",
