--- a/packages/app/ios/.xcode.env
+++ b/packages/app/ios/.xcode.env
@@ -8,5 +8,5 @@
 # Customize the NODE_BINARY variable here.
 # For example, to use nvm with brew, add the following line
 # . "$(brew --prefix nvm)/nvm.sh" --no-use
-export NODE_BINARY=/Users/fdecampredon/.nvm/versions/node/v16.13.2/bin/node
+export NODE_BINARY=node
 
