--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azzapp/relay": "*",
     "@azzapp/shared": "*",
+    "@azzapp/i18n": "*",
     "appcenter": "^4.4.5",
     "appcenter-analytics": "^4.4.5",
     "appcenter-crashes": "^4.4.5",
@@ -21,11 +22,13 @@
     "lodash": "^4.17.21",
     "lru-cache": "^7.13.2",
     "react": "^18.1.0",
+    "react-intl": "^6.1.1",
     "react-native": "^0.69.0",
     "react-native-create-thumbnail": "^1.5.1",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-localize": "^2.2.3",
     "react-native-photo-gallery-api": "^1.1.0",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "^2.10.0",
