--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "postinstall": "patch-package",
+    "prepare": "husky install",
     "lint": "eslint .",
     "typecheck": "tsc",
     "test": "jest",
@@ -23,26 +24,33 @@
     "run:android": "yarn workspace @azzapp/app run:android",
     "build:ios": "yarn workspace @azzapp/app build:ios",
     "deploy:ios": "yarn workspace @azzapp/app deploy:ios",
-    "update-graphql-schema": "ts-node ./scripts/updateGraphQLSchema.ts"
+    "update-graphql-schema": "ts-node ./scripts/updateGraphQLSchema.ts",
+    "i18n:extract": "node scripts/i18nextract.js",
+    "i18n:compile": "yarn workspace @azzapp/i18n build"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/plugin-transform-react-jsx": "^7.17.3",
     "@babel/runtime": "^7.12.5",
+    "@formatjs/cli-lib": "^5.1.0",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-native": "^4.0.11",
     "@types/jest": "^29.0.2",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "babel-jest": "^29.0.3",
+    "babel-plugin-formatjs": "^10.3.28",
     "babel-plugin-relay": "^14.1.0",
+    "dependency-tree": "^8.1.2",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-formatjs": "^4.3.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^8.0.1",
     "jest": "^29.0.3",
     "metro-react-native-babel-preset": "^0.70.3",
     "node-fetch": "2",
