--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@azzapp/app": "*",
     "@azzapp/data": "*",
+    "@azzapp/i18n": "*",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.29.1",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "next": "^12.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-intl": "^6.1.1",
     "react-native-web": "^0.18.1",
     "react-native-web-linear-gradient": "^1.1.2",
     "react-relay": "^14.1.0",
