feat: ui of signin and signup (#30)
* init

* Update react native type

* update theme color

* Change modal presentation to full screen

* Update ui button

* Follow up button ui change

* add stringhelper

* design authentication

* remove error capability of textinput

* remove saving credential store as if can be unsecure

* fix node binary import

* restore env.example

* remove unused props

* linting

* Update TextInput and add test

* introducing checkbox

* Create CheckBox component with few test

* Making some changes from github review

* restore project.pbxproj

* restore original version

* restore origina signup web

* add validator as esModules in jest.config

* update snapshot

* implement forgotpassword screen

* make transition view on forgotPassword

* Introduce form component

* update svg (version 13 require for futur fabric migration)

* next config to handle svg and validator

* type  submit not working on web.

* restore replace on web

* cannot make form web working

* use ratio on stoke width

* add i18n on auth screen

* linting

* lint & build

* update checkbox snpashot after updating stroke width

* remove spcified simulator in package

* improve mock with hook (pr waiting in lib)

* setting up jest for Screen

* remove snapshot and add more test on screen

* some fix

* some fix

* update accessiblity role

* wip

* renaming font500 to fontMedium to respect font naming

* Improve button and test

* more clean test

* fix comment from PR

* fix compiolation test due to reanimated2

* remove useEffect. need more test to proove it is usefull

* update button component and add some test

* linter

* tupo

* fix type and use mock for reanimated transition

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -93,6 +93,8 @@
     "react/no-unescaped-entities": "off",
     "react/prop-types": "off",
     "eslint-comments/disable-enable-pair": "off",
+    "react/self-closing-comp": 2,
+    "react-hooks/rules-of-hooks": "error",
     "formatjs/enforce-description": "error",
     "formatjs/enforce-default-message": "error",
     "formatjs/enforce-placeholders": "error",
