--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "react-relay": "^14.1.0"
+    "react-relay": "^14.1.0",
+    "validator": "13.7.0"
   },
   "devDependencies": {
-    "@types/react-relay": "^13.0.2"
+    "@types/react-relay": "^13.0.2",
+    "@types/validator": "^13.7.6"
   }
 }
