--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,9 +11,10 @@
     "pod-install": "cd ios && bundle exec pod install"
   },
   "dependencies": {
+    "@azzapp/i18n": "*",
     "@azzapp/relay": "*",
     "@azzapp/shared": "*",
-    "@azzapp/i18n": "*",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "appcenter": "^4.4.5",
     "appcenter-analytics": "^4.4.5",
     "appcenter-crashes": "^4.4.5",
@@ -29,12 +30,14 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.2.3",
+    "react-native-pager-view": "^6.0.0",
     "react-native-photo-gallery-api": "^1.1.0",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^12.4.4",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "^0.18.1",
     "react-relay": "^14.1.0",
     "react-transition-group": "^4.4.5",
@@ -44,7 +47,7 @@
     "@testing-library/react-native": "^11.0.0",
     "@types/chroma-js": "^2.1.3",
     "@types/react": "^18.0.3",
-    "@types/react-native": "^0.69.11",
+    "@types/react-native": "^0.69.13",
     "@types/react-relay": "^13.0.2",
     "@types/react-transition-group": "^4.4.5",
     "@types/relay-test-utils": "^6.0.5",
