--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "deploy:ios": "yarn workspace @azzapp/app deploy:ios",
     "update-graphql-schema": "ts-node ./scripts/updateGraphQLSchema.ts",
     "i18n:extract": "node scripts/i18nextract.js",
-    "i18n:compile": "yarn workspace @azzapp/i18n build"
+    "i18n:compile": "yarn workspace @azzapp/i18n build",
+    "clean": "rm -Rf node_modules && yarn workspace @azzapp/app clean && yarn workspace @azzapp/web clean"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -35,21 +36,21 @@
     "@formatjs/cli-lib": "^5.1.0",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-native": "^4.0.11",
-    "@types/jest": "^29.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
-    "babel-jest": "^29.0.3",
+    "@types/jest": "^29.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "babel-jest": "^29.1.2",
     "babel-plugin-formatjs": "^10.3.28",
     "babel-plugin-relay": "^14.1.0",
     "dependency-tree": "^8.1.2",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-formatjs": "^4.3.1",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-formatjs": "^4.3.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "jest": "^29.0.3",
     "metro-react-native-babel-preset": "^0.70.3",
@@ -60,7 +61,7 @@
     "relay-compiler": "^14.1.0",
     "ts-node": "^10.7.0",
     "ttab": "^0.7.2",
-    "typescript": "^4.7.2"
+    "typescript": "^4.8.4"
   },
   "resolutions": {
     "@babel/core": "7.17.12",
