--- a/packages/app/.gitignore
+++ b/packages/app/.gitignore
@@ -20,6 +20,7 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+ios/.xcode.env.local
 
 # Android/IntelliJ
 #
@@ -29,6 +30,8 @@ build/
 local.properties
 *.iml
 *.hprof
+.cxx/
+
 
 # node.js
 #
@@ -63,5 +66,6 @@ fastlane/test_output
 # Ruby / CocoaPods
 /ios/Pods/
 /vendor/bundle/
+
 
 
