--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,7 +8,8 @@
     "dev": "react-native start",
     "build:ios": "bundle exec fastlane ios build",
     "deploy:ios": "bundle exec fastlane ios deploy",
-    "pod-install": "cd ios && bundle exec pod install"
+    "pod-install": "cd ios && bundle exec pod install",
+    "clean": "watchman watch-del-all && rm -rf node_modules && rm -Rf ios/build && rm -Rf ios/Pods"
   },
   "dependencies": {
     "@azzapp/i18n": "*",
@@ -22,27 +23,27 @@
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
     "lodash": "^4.17.21",
-    "lru-cache": "^7.13.2",
+    "lru-cache": "^7.14.0",
     "react": "^18.2.0",
-    "react-intl": "^6.1.1",
-    "react-native": "^0.69.0",
-    "react-native-create-thumbnail": "^1.5.1",
+    "react-intl": "^6.1.2",
+    "react-native": "0.70.2",
+    "react-native-create-thumbnail": "^1.6.3",
     "react-native-encrypted-storage": "^4.0.2",
-    "react-native-gesture-handler": "^2.5.0",
-    "react-native-linear-gradient": "^2.5.6",
+    "react-native-gesture-handler": "2.7.0",
+    "react-native-linear-gradient": "2.6.2",
     "react-native-localize": "^2.2.3",
-    "react-native-pager-view": "^6.0.0",
+    "react-native-pager-view": "6.0.1",
     "react-native-qrcode-svg": "^6.1.2",
-    "react-native-reanimated": "^2.10.0",
-    "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.17.0",
-    "react-native-svg": "^12.4.4",
-    "react-native-tab-view": "^3.1.1",
+    "react-native-reanimated": "2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "3.18.0",
+    "react-native-svg": "13.3.0",
+    "react-native-tab-view": "3.2.1",
     "react-native-vision-camera": "^2.14.1",
-    "react-native-web": "^0.18.1",
+    "react-native-web": "0.18.9",
     "react-relay": "^14.1.0",
     "react-transition-group": "^4.4.5",
-    "use-debounce": "^8.0.1"
+    "use-debounce": "8.0.4"
   },
   "devDependencies": {
     "@testing-library/react-native": "^11.0.0",
