--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "(cd ../../ && yarn build) && (cd ../../ && yarn patch-package) && next build",
-    "start": "next start"
+    "start": "next start",
+    "clean": "rm -Rf node_modules"
   },
   "dependencies": {
     "@azzapp/app": "*",
@@ -21,8 +22,8 @@
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.1.1",
-    "react-native-web": "^0.18.9",
+    "react-intl": "^6.1.2",
+    "react-native-web": "0.18.9",
     "react-native-web-linear-gradient": "^1.1.2",
     "react-relay": "^14.1.0",
     "safe-area-insets": "^1.4.1"
@@ -30,11 +31,11 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^17.0.23",
-    "@types/react": "^18.0.20",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.8.2",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "babel-plugin-react-native-web": "^0.18.1",
+    "babel-plugin-react-native-web": "^0.18.9",
     "next-transpile-modules": "^9.0.0",
     "react-native-web-image-loader": "^0.1.1"
   }
