--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "jest": "^29.0.3",
-    "metro-react-native-babel-preset": "^0.70.3",
+    "metro-react-native-babel-preset": "0.72.3",
     "node-fetch": "2",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
@@ -64,8 +64,7 @@
     "typescript": "^4.8.4"
   },
   "resolutions": {
-    "@babel/core": "7.17.12",
-    "@babel/plugin-transform-typescript": "7.17.12",
+    "@babel/core": "^7.12.9",
     "@types/react": "^18.0.20"
   }
 }
