--- a/packages/app/ios/.xcode.env
+++ b/packages/app/ios/.xcode.env
@@ -9,4 +9,5 @@
 # For example, to use nvm with brew, add the following line
 # . "$(brew --prefix nvm)/nvm.sh" --no-use
 export NODE_BINARY=node
-
+#temporary fix
+export USE_HERMES=true
