--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,7 +9,8 @@
     "build:ios": "bundle exec fastlane ios build",
     "deploy:ios": "bundle exec fastlane ios deploy",
     "pod-install": "cd ios && bundle exec pod install",
-    "clean": "watchman watch-del-all && rm -rf node_modules && rm -Rf ios/build && rm -Rf ios/Pods"
+    "clean": "watchman watch-del-all && rm -rf node_modules && rm -Rf ios/build && rm -Rf ios/Pods",
+    "bundle": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios"
   },
   "dependencies": {
     "@azzapp/i18n": "*",
