--- a/packages/app/ios/.xcode.env
+++ b/packages/app/ios/.xcode.env
@@ -9,5 +9,5 @@
 # For example, to use nvm with brew, add the following line
 # . "$(brew --prefix nvm)/nvm.sh" --no-use
 export NODE_BINARY=node
-#temporary fix
+#temporary fix. don't forget to also remove from ci.yml if an official fix is released
 export USE_HERMES=true
