--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Build iOS App
 on:
   push:
     branches:
@@ -7,7 +7,7 @@ on:
 jobs:
   continuous-integration :
     name: Validate and test and Build
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
       - uses: actions/checkout@v3
 
