Tests implementation && Some accessibility (#51)
* RecentSearch test

* post renderer

* postLink

* Recommended profiles list

* trending post list

* add more test

* remove unused context

* add accessiblity

* lint

* ProgressBar testing

* add more accessiblity

* Update CoverLayout.tsx

* Update PostRenderer.test.tsx

* some accessibility

* fixing test différent behavior on CI

* some test to make scroll event work on ci

* trying to act scroll

* migrate ubuntu latest

* scroll horizontal event not working

* review

* review some accessibligity

* Linter and typechekcing

* accessibility review

* linter

* postLink test need react-intl provider

* temporary remove accessibility for test purpose (fix later)

* fix

* Fix after @fdecampredon review

* update test bc accessibiltiyLabel did not exist

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -3,7 +3,7 @@ on: pull_request
 jobs:
   continuous-integration :
     name: Validate and test and Build
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
