Migrate to next 13 app directory (#71)
* Migrate to next 13 app directory

* PR feedbacks

--- a/packages/relay/package.json
+++ b/packages/relay/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "relay-runtime": "^14.1.0"
+    "relay-runtime": "^14.1.0",
+    "@azzapp/shared": "*"
   }
 }
