Migrate to planetscale (#74)
* Migrate to planetscale

* Fix node loading

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,8 @@
 {
   "recommendations": [
-    "lawrencegrant.cql",
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
-    "meta.relay"
+    "meta.relay",
+    "Prisma.prisma"
   ]
 }
