--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -3,18 +3,23 @@
   "version": "0.0.1",
   "private": true,
   "main": "./lib",
-  "devDependencies": {
-    "@types/lodash": "^4.14.186",
-    "@types/uuid": "^8.3.4"
-  },
   "dependencies": {
-    "@azzapp/shared": "*",
     "@azzapp/relay": "*",
-    "cassandra-driver": "^4.6.3",
+    "@azzapp/shared": "*",
+    "@planetscale/database": "^1.5.0",
     "cuid": "^2.1.8",
+    "dataloader": "^2.1.0",
     "graphql": "^16.6.0",
     "graphql-relay": "^0.10.0",
+    "kysely": "^0.23.3",
+    "kysely-planetscale": "^1.2.1",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@prisma/client": "^4.8.0",
+    "@types/lodash": "^4.14.186",
+    "@types/uuid": "^8.3.4",
+    "prisma": "^4.8.0"
   }
 }
