--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -1,8 +1,6 @@
-DB_CONTACT_POINT=""
-DB_DATACENTER=""
-DB_USERNAME=""
-DB_PASSWORD=""
-DB_KEYSPACE=""
+DATABASE_HOST=""
+DATABASE_USERNAME=""
+DATABASE_PASSWORD=""
 TOKEN_SECRET=token-secret
 REFRESH_TOKEN_SECRET=refresh-token-secret
 SECRET_COOKIE_PASSWORD=""
