--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "babel-jest": "^29.3.1",
     "babel-plugin-formatjs": "^10.3.35",
     "babel-plugin-relay": "^14.1.0",
-    "dependency-tree": "^8.1.2",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -53,6 +52,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "fix-esm": "^1.0.1",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "metro-react-native-babel-preset": "0.72.3",
