--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,6 +12,7 @@
     "@azzapp/app": "*",
     "@azzapp/data": "*",
     "@azzapp/i18n": "*",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
