--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -37,7 +37,7 @@
     "react-native-gesture-handler": "2.8.0",
     "react-native-linear-gradient": "2.6.2",
     "react-native-localize": "^2.2.4",
-    "react-native-mmkv": "^2.6.1",
+    "react-native-mmkv": "2.5.1",
     "react-native-pager-view": "6.1.2",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "2.14.4",
