--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,16 +16,12 @@ jobs:
           node-version: '16'
           cache: 'yarn'
           
-      - run: yarn install --frozen-lockfile
+      - run: yarn install --frozen-lockfile  --immutable
 
       - uses: ruby/setup-ruby@v1
         with:
           working-directory: packages/app
           bundler-cache: true
-
-      # JavaScript build
-      - name: Relay Compiler 
-        run: yarn build
       
       # Testing
       - name: Lint
@@ -37,6 +33,72 @@ jobs:
       - name: Test
         run: yarn test
 
+      - name : Fetch the previous query-map.json file from AzzappApp/azzapp-precompiled-queries repository
+        uses: actions/checkout@v3
+        with: 
+          repository: 'AzzappApp/azzapp-precompiled-queries'
+          path: 'azzapp-precompiled-queries'
+          token: ${{ secrets.QUERY_MAP_PAT }}
+          ref: 'main'
+
+      - name: Copy the the previous query-map.json file
+        run: cp -R azzapp-precompiled-queries/${{ github.ref_name }}/query-map.json packages/relay  
+
+       # use manual command instead of build command for passing --repersist option to relay
+      - name: Force rebuild the query-map.json
+        run: yarn relay --repersist
+        env:
+          CI: true  
+
+      - name: Check if there is difference between 2 precompiled query map
+        id: query-map-updated
+        run: |
+          if cmp -s "azzapp-precompiled-queries/${{ github.ref_name }}/query-map.json" "packages/relay/query-map.json"
+          then
+              echo "QUERY_MAP_UPDATED=false" >> $GITHUB_OUTPUT
+          else
+              echo "QUERY_MAP_UPDATED=true" >> $GITHUB_OUTPUT
+          fi  
+
+      - name: Copy the file back to azzapp-precompiled-queries repository
+        if: ${{ steps.query-map-updated.outputs.QUERY_MAP_UPDATED == 'true'}}
+        run: cp -r packages/relay/query-map.json azzapp-precompiled-queries/${{ github.ref_name }}
+        env:
+          CI: true
+
+      # was not able to make a push and commit working on another repo. it was creating a submodule ...
+      - uses: peter-evans/create-pull-request@v4
+        id: cpr
+        if: ${{ steps.query-map-updated.outputs.QUERY_MAP_UPDATED == 'true'}}
+        with:
+          token: ${{ secrets.QUERY_MAP_PAT }}
+          commit-message: 'Update query-map.json'
+          title: '[Update] Precompiled Queries on ${{ github.ref_name }}'
+          branch: '${{ github.ref_name }}-precompiled-queries'
+          base: 'main'
+          delete-branch: true 
+          labels: 'precompiled-queries'
+          reviewers: '@fdecompredon,@batical'
+          draft: false
+          path: 'azzapp-precompiled-queries'
+          branch-suffix: timestamp  # the branch is using a prefix timestamp to avoid issue creating a PR already done before
+
+      # a github action on zzapp-precompiled-queries will delete the branch
+      - name: Merging the PR
+        if: ${{ steps.query-map-updated.outputs.QUERY_MAP_UPDATED == 'true'}}
+        uses: actions/github-script@v6.4.0
+        env:
+          pull_number: ${{ steps.cpr.outputs.pull-request-number}}
+        with:
+          github-token: ${{ secrets.QUERY_MAP_PAT }}
+          script: |
+            const { pull_number} = process.env;
+            await github.rest.pulls.merge({
+              owner: "AzzappApp",
+              repo: "azzapp-precompiled-queries",
+              pull_number,
+            });
+
       # Retrieves Vercel url
       - name: Get Vercel Preview Url
         run: node ./scripts/getVercelPreviewUrl.js ${{ github.ref }} ${{ github.event.pull_request.head.sha }}  ${{ secrets.VERCEL_TOKEN }}
@@ -44,7 +106,7 @@ jobs:
 
       # Appcenter setup
       - name: Set App Center env for staging
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/staging'
         run: |
           echo "app_center_ios_app_name=${{ secrets.APPCENTER_STAGING_IOS_APP_NAME }}" >> $GITHUB_ENV
           echo "app_center_ios_api_token=${{ secrets.APPCENTER_STAGING_IOS_API_TOKEN }}" >> $GITHUB_ENV
