--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           working-directory: packages/app
           bundler-cache: true
+
+      - name: Relay & Graphql building
+        run: yarn build
+        env:
+          CI: true    
       
       # Testing
       - name: Lint
