add staging to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
       - stable
+      - staging
 jobs:
   continuous-integration :
     name: Validate and test and Build
