fix deploy build (#159)

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "dev": "node ./scripts/dev.js",
     "build:ios": "turbo run build:ios",
     "build:android": "turbo run build:android",
-    "deploy:ios": "turbo run deploy:ios",
-    "deploy:android": "turbo run deploy:android",
     "relay:build": "relay-compiler",
     "relay:watch": "relay-compiler --watch",
     "relay:prepare": "touch ./packages/relay/query-map.json",
     "i18n:extract": "node scripts/i18nextract.js",
+    "deploy:ios": "yarn workspace @azzapp/app deploy:ios",
+    "deploy:android": "yarn workspace @azzapp/app deploy:android",
     "run:ios": "yarn workspace @azzapp/app run:ios",
     "run:android": "yarn workspace @azzapp/app run:android",
     "update-graphql-schema": "node ./scripts/updateGraphQLSchema.js"
