Planetscale dev CI (#137)
* initial version

* add ps command

fix

fixing pr script 1

fix

psc2

fixing old api github

move repository

w

ps update add

add ps-update

update github-script

add ps-delete

update script

i dont know

customize ps script

clean

includ e pscale automatique handling

Minor Refactoring (#122)

* remove unused code

* Remove outdated android build fix

* Fix some import ordering and move theme file

---------

Co-authored-by: fahbe <shecart.mydev@gmail.com>

add autmotatic script ofr mergin PR (#138)

Staging (#141)

* no docker false on gh runner

* removing no docker

* test changing modle (#140)

* test changing modle

* no docker false

* proc

* d

* dd

some fix

another fix on condition

fixing merge on close pull request script

Restore schema prisma

Create release-staging

try adding manual workflow

revert

fix: planetscale

* Fix ci main (#149)

* Differentiate dev and staging url on vercel (#152)

* Fix i18n (#154)

* fix fr langs

* KeyboardAvoidingView on CoverEditionScreen

* Update PostGraphQL.ts (#156)

Fix Vercel preview URL for main and staging

* recompute mask media when source change (#157)

fix typo in url

* Merge stagin in main (#158)

* add staging to ci

* Relax rules on cover saving

* fix db schema for optional values

* Turbo and paths (#155)

* Refactor project structure

* Build all project with ts
* Use package.json "exports" fiels when possible to remap import
* Use typescript path when not

* apply path mapping to app

* apply path mapping to web

* apply path mapping to data

* fix update schema script

* Fix i18n generation

* Add turbo

* fix some builds

* fix tests

* fix i18n pre-commit script

* Fix full CI process

* fix @azzapp/data linting

* fix deploy build (#159)

chore: code cleaning

chore: typo

add new test devices

---------

Co-auth

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -1,5 +1,10 @@
-name: Test
-on: pull_request
+name: CI process on pull request on release branch
+on: 
+  pull_request:
+    branches:
+      - main
+      - staging
+      - production
 jobs:
   continuous-integration :
     name: Validate and test and Build
