--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: Build iOS App
+name: Build and Deploy Azzapp
 on:
   push:
     branches:
       - main
-      - stable
       - staging
+      - production
 jobs:
   continuous-integration :
     name: Validate and test and Build
@@ -23,12 +23,7 @@ jobs:
         with:
           working-directory: packages/app
           bundler-cache: true
-
-      - name: Relay & Graphql building
-        run: yarn build
-        env:
-          CI: true    
-      
+          
       # Testing
       - name: JavaScript build
         run: yarn build
