--- a/packages/app/turbo.json
+++ b/packages/app/turbo.json
@@ -8,14 +8,32 @@
       "inputs": ["src/**/*"]
     },
     "build:ios": {
-      "dependsOn": ["//#relay:build", "^build"],
+      "dependsOn": ["build:ios:native", "build:ios:bundle"],
+      "cache": false
+    },
+    "build:ios:bundle": {
+      "dependsOn": ["//#relay:build", "^build", "build:ios:native"],
+      "cache": false
+    },
+    "build:ios:native": {
+      "inputs": [
+        "ios/azzapp/**/*",
+        "ios/azzapp.xcodeproj/project.pbxproj",
+        "ios/azzapp.xcworkspace/content.xcworkspacedata",
+        "ios/Podfile",
+        "ios/Podfile.lock",
+        "ios/azzapp-Bridging-Header.h"
+      ],
+      "outputs": ["ios/fastlane/builds/azzapp.xcarchive/**/*"],
+      "dependsOn": ["pod-install"]
+    },
+    "pod-install": {
       "cache": false
     },
     "build:android": {
       "dependsOn": ["//#relay:build", "^build", "pod-install"],
       "cache": false
     },
-    "pod-install": {},
     "typecheck": {
       "dependsOn": ["//#relay:build", "^build"],
       "inputs": ["src/**/*"]
