--- a/packages/data/turbo.json
+++ b/packages/data/turbo.json
@@ -4,12 +4,12 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build", "generate-db-type"],
-      "outputs": ["lib/**/*"],
-      "inputs": ["src/**/*"]
+      "outputs": ["lib/**"],
+      "inputs": ["src/**"]
     },
     "typecheck": {
       "dependsOn": ["^build", "generate-db-type"],
-      "inputs": ["src/**/*"]
+      "inputs": ["src/**"]
     },
     "generate-db-type": {
       "inputs": ["prisma/schema.prisma"]
