--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -33,21 +33,19 @@
   "dependencies": {
     "@azzapp/relay": "*",
     "@azzapp/shared": "*",
+    "@paralleldrive/cuid2": "^2.2.0",
     "@planetscale/database": "^1.5.0",
     "@prisma/client": "^4.8.1",
-    "cuid": "^2.1.8",
     "dataloader": "^2.1.0",
     "graphql": "^16.6.0",
     "graphql-relay": "^0.10.0",
     "graphql-scalars": "^1.20.1",
     "kysely": "^0.23.3",
     "kysely-planetscale": "^1.2.1",
-    "lodash": "^4.17.21",
-    "uuid": "^8.3.2"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186",
-    "@types/uuid": "^8.3.4",
     "prisma": "^4.8.0"
   }
 }
