feat: back office (#183)
* Add roles column to user table

* Extract auth logic from web

* migrate viewer logic in @azzapp/auth

* Remove usage of server context

* backoffice bootstrap

* Fix lint and build

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "packages/app/android",
     "packages/app/fastlane",
     "packages/app/vendor",
+    "packages/auth/lib",
     "packages/data/lib",
     "packages/shared/lib",
     "packages/web/.next",
