--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -1,5 +1,29 @@
 {
   "name": "@azzapp/backoffice",
   "version": "0.0.1",
-  "private": true
+  "private": true,
+  "scripts": {
+    "dev": "next dev -p 3005",
+    "build": "next build",
+    "start": "next start",
+    "typecheck": "tsc -p tsconfig.next.json --noEmit"
+  },
+  "devScripts": [
+    "dev"
+  ],
+  "dependencies": {
+    "@azzapp/app": "*",
+    "@azzapp/shared": "*",
+    "@azzapp/data": "*",
+    "lodash": "^4.17.21",
+    "next": "^13.2.3",
+    "react": "^18.2.0",
+    "react-admin": "^4.8.2",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9"
+  }
 }
