--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -31,6 +31,7 @@
     "definition:watch"
   ],
   "dependencies": {
+    "@azzapp/auth": "*",
     "@azzapp/relay": "*",
     "@azzapp/shared": "*",
     "@paralleldrive/cuid2": "^2.2.0",
