--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "@azzapp/app": "*",
+    "@azzapp/auth": "*",
     "@azzapp/data": "*",
     "@azzapp/i18n": "*",
     "@azzapp/relay": "*",
@@ -20,9 +21,6 @@
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@paralleldrive/cuid2": "^2.2.0",
     "bcrypt-ts": "^3.0.0",
-    "cloudinary": "^1.33.0",
-    "cors": "^2.8.5",
-    "iron-webcrypto": "^0.5.0",
     "lodash": "^4.17.21",
     "next": "^13.2.3",
     "react": "^18.2.0",
@@ -34,9 +32,6 @@
     "safe-area-insets": "^1.4.1"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
-    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
