--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -5,6 +5,7 @@
       "@azzapp/shared/*": ["../shared/src/*"],
       "@azzapp/data/*": ["../data/src/*"],
       "@azzapp/app/*": ["../app/src/*"],
+      "@azzapp/auth/*": ["../auth/src/*"],
       "#*": ["./src/*"]
     }
   }
