feat : backoffice template cover builder (#198)
* feat: add role to user

* Initial commit

feat: template cover editor

fix: typo

Feat: Move category to template add mediastyle

feat: ra features toolbar

fix: canvas first rander

fix: remove filter query was causing missing element

fix: add filter and fix colorpalette + text

Update .gitignore

* fix review

* feat: add role to user

* Initial commit

feat: template cover editor

fix: typo

Feat: Move category to template add mediastyle

feat: ra features toolbar

fix: canvas first rander

fix: remove filter query was causing missing element

fix: add filter and fix colorpalette + text

Update .gitignore

* fix review

* Fix type errors

---------

Co-authored-by: François de Campredon <francois.de.campredon@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -142,5 +142,7 @@ packages/app/ios/.xcode.env.local
 packages/web/.vscode/settings.json
 
 
-.pscale/env
 packages/backoffice/.vscode/settings.json
+
+# vscode extension that is not needed in the repo
+.vscode/restore-terminals.json
