--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -24,7 +24,8 @@
     "definition": "tsc -p tsconfig.build.json",
     "definition:watch": "yarn definition --watch",
     "compile": "babel src --config-file ./babel.config.js -d lib --extensions '.ts,.tsx,.js,.jsx,.json'",
-    "compile:watch": "yarn compile --watch"
+    "compile:watch": "yarn compile --watch",
+    "clean": "rm -rf lib && rm -f tsconfig.build.tsbuildinfo && rm -rf node_modules"
   },
   "devScripts": [
     "compile:watch",
