--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "deploy:android": "yarn workspace @azzapp/app deploy:android",
     "run:ios": "yarn workspace @azzapp/app run:ios",
     "run:android": "yarn workspace @azzapp/app run:android",
-    "update-graphql-schema": "node ./scripts/updateGraphQLSchema.js"
+    "update-graphql-schema": "node ./scripts/updateGraphQLSchema.js",
+    "clean": "yarn workspaces run clean && rm -Rf node_mdules && rm -f tsconfig.tsbuildinfo"
   },
   "devScripts": [
     "relay:watch"
