--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,7 +20,8 @@
     "lib:compile:watch": "yarn lib:compile --watch",
     "assets:copy": "node scripts/copy-assets",
     "assets:watch": "yarn assets:copy && node scripts/watch-assets",
-    "pod-install": "cd ios && bundle exec pod install"
+    "pod-install": "cd ios && bundle exec pod install",
+    "clean": "watchman watch-del-all && rm -Rf lib && rm -Rf node_modules &&  rm -Rf ios/Pods && rm -Rf ios/build  && cd android && ./gradlew clean"
   },
   "devScripts": [
     "lib:compile:watch",
