--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "clean": "rm -rf lib && rm -f tsconfig.tsbuildinfo"
   },
   "devScripts": [
     "dev"
