--- a/packages/relay/package.json
+++ b/packages/relay/package.json
@@ -2,6 +2,9 @@
   "name": "@azzapp/relay",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "clean": "rm -rf artifacts"
+  },
   "dependencies": {
     "relay-runtime": "^14.1.0",
     "@azzapp/shared": "*"
