feat: Onboarding cover with template (#201)
* feat: add role to user

* Initial commit

feat: template cover editor

fix: typo

Feat: Move category to template add mediastyle

feat: ra features toolbar

fix: canvas first rander

fix: remove filter query was causing missing element

fix: add filter and fix colorpalette + text

Update .gitignore

* switch env

* fix: busines profile was never ready

* fear(backoffice): remove unecessary database

* feat(backoffice): add image cover controle dimension, add merged/segmented into data for simplication

* chore(vscode): add restore terminal config

* feat: add cover template

* fix: current test

* fix: degedating template for web. a CoverScreenViewrenderer has to be implemented instead of using CoverScreenEditCoverRender due to reac-native-vhiew-shot

* chore: renaming

* feat: add tests and accessibiltiy

* fix: linting

* Prevent usage of web only image helpers on mobile

* feat: clean script

* some rework

* chore: build

* chore: tests

* chore(test): rename query

* fix(test): CoverEditionScreen colorpalette

* fix(test): CoverEdition colorpalette

* fix(test): could save avec title edition

* remove temporary file

* Test linter

* chore: cannot fix type relay...

fix

fix: web

fix  web

* Fix: create a real media in backoffice for tempalte cover

* feat(backoffice) : add a selectlist for country

* Fix source media Id

* Remove console.log

* fix: review

* remove useless return

* fix: coverTempalte on node and test

* remove unecessary id

* fix test

* last fix

---------

Co-authored-by: François de Campredon <francois.de.campredon@gmail.com>

--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -13,6 +13,7 @@
     "dev"
   ],
   "dependencies": {
+    "@azzapp/auth": "*",
     "@azzapp/data": "*",
     "@azzapp/shared": "*",
     "lodash": "^4.17.21",
