chore: upgrade dependencies (#227)
* Upgrade dependencies

reanimated was kept in 2.x version since rn-vision-camera is not compatible with reanimated v3 in 2.x version.

* Fix test and lint after testing-library upgrade

see : https://callstack.github.io/react-native-testing-library/docs/migration-v12#2-byrole-queries-now-return-only-accessibility-elements

* Update CoverLayerList.tsx

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -199,7 +199,15 @@
         "@typescript-eslint/prefer-ts-expect-error": "error",
         "@typescript-eslint/sort-type-union-intersection-members": "error",
         "@typescript-eslint/switch-exhaustiveness-check": "error"
-      }
+      },
+      "overrides": [
+        {
+          "files": ["*.test.tsx", "*.test.ts"],
+          "rules": {
+            "@typescript-eslint/no-floating-promises": "off"
+          }
+        }
+      ]
     }
   ]
 }
