--- a/package.json
+++ b/package.json
@@ -34,47 +34,46 @@
   ],
   "devDependencies": {
     "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.20.5",
-    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/core": "^7.21.3",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
     "@babel/preset-typescript": "^7.21.0",
     "@babel/register": "^7.21.0",
-    "@babel/runtime": "^7.20.6",
-    "@formatjs/cli-lib": "^5.1.12",
-    "@svgr/webpack": "^6.5.1",
-    "@testing-library/jest-native": "^5.4.0",
+    "@babel/runtime": "^7.21.0",
+    "@formatjs/cli-lib": "^6.0.3",
+    "@svgr/webpack": "^7.0.0",
+    "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/blessed": "^0.1.21",
-    "@types/jest": "^29.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "babel-jest": "^29.3.1",
-    "babel-plugin-formatjs": "^10.3.35",
+    "@types/jest": "^29.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "babel-jest": "^29.5.0",
+    "babel-plugin-formatjs": "^10.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-relay": "^14.1.0",
     "blessed": "^0.1.81",
     "blessed-xterm": "^1.4.4",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-formatjs": "^4.3.8",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-formatjs": "^4.9.1",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "fix-esm": "^1.0.1",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "metro-react-native-babel-preset": "0.72.3",
     "node-fetch": "2",
-    "patch-package": "^6.5.0",
+    "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.7",
     "relay-compiler": "^14.1.0",
-    "turbo": "^1.8.2",
-    "typescript": "^5.0.0-beta"
+    "turbo": "^1.8.8",
+    "typescript": "^5.0.3"
   },
   "resolutions": {
-    "@babel/core": "^7.20.5",
-    "@types/react": "^18.0.26"
+    "@types/react": "18.0.31"
   }
 }
