--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -33,9 +33,9 @@
     "@azzapp/i18n": "*",
     "@azzapp/relay": "*",
     "@azzapp/shared": "*",
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-camera-roll/camera-roll": "^5.2.0",
-    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-camera-roll/camera-roll": "^5.3.1",
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "appcenter": "^4.4.5",
     "appcenter-analytics": "^4.4.5",
     "appcenter-crashes": "^4.4.5",
@@ -43,35 +43,35 @@
     "events": "^3.3.0",
     "graphql": "^16.6.0",
     "i18n-iso-countries": "^7.5.0",
-    "libphonenumber-js": "^1.10.18",
+    "libphonenumber-js": "^1.10.24",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-intl": "^6.2.5",
+    "react-intl": "^6.3.2",
     "react-native": "0.70.6",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "2.9.0",
     "react-native-linear-gradient": "2.6.2",
-    "react-native-localize": "^2.2.4",
-    "react-native-mmkv": "2.5.1",
-    "react-native-pager-view": "6.1.2",
-    "react-native-qrcode-svg": "^6.1.2",
-    "react-native-reanimated": "2.14.4",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "3.18.2",
-    "react-native-svg": "13.6.0",
-    "react-native-tab-view": "3.3.4",
+    "react-native-localize": "^2.2.6",
+    "react-native-mmkv": "^2.6.3",
+    "react-native-pager-view": "^6.2.0",
+    "react-native-qrcode-svg": "^6.2.0",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-view-shot": "^3.5.0",
-    "react-native-vision-camera": "^2.15.2",
-    "react-native-web": "0.18.10",
+    "react-native-vision-camera": "^2.15.4",
+    "react-native-web": "^0.19.1",
     "react-phone-number-input": "^3.2.19",
     "react-relay": "^14.1.0",
     "react-transition-group": "^4.4.5",
-    "use-debounce": "9.0.2"
+    "use-debounce": "^9.0.3"
   },
   "devDependencies": {
-    "@testing-library/react-native": "^11.5.0",
-    "@types/chroma-js": "^2.1.4",
-    "@types/react": "^18.0.26",
+    "@testing-library/react-native": "^12.0.1",
+    "@types/chroma-js": "^2.4.0",
+    "@types/react": "^18.0.31",
     "@types/react-native": "^0.70.8",
     "@types/react-relay": "^14.1.2",
     "@types/react-test-renderer": "^18.0.0",
@@ -79,7 +79,7 @@
     "@types/relay-test-utils": "^14.1.0",
     "copyfiles": "^2.4.1",
     "fb-watchman": "^2.0.2",
-    "react-native-dotenv": "^3.4.6",
+    "react-native-dotenv": "^3.4.8",
     "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "^18.2.0",
     "relay-test-utils": "^14.1.0",
