--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,20 +23,19 @@
     "@paralleldrive/cuid2": "^2.2.0",
     "bcrypt-ts": "^3.0.0",
     "lodash": "^4.17.21",
-    "next": "^13.2.3",
+    "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.2.5",
-    "react-native-web": "0.18.10",
+    "react-intl": "^6.3.2",
+    "react-native-web": "0.19.1",
     "react-native-web-linear-gradient": "^1.1.2",
-    "react-relay": "^14.1.0",
-    "safe-area-insets": "^1.4.1"
+    "react-relay": "^14.1.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.17",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "babel-plugin-react-native-web": "^0.18.10",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.31",
+    "@types/react-dom": "^18.0.11",
+    "babel-plugin-react-native-web": "^0.19.1",
     "react-native-web-image-loader": "^0.1.1"
   }
 }
